fixbug:fix swagger.yaml
